<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval MeshMS Gateway application
 *
 * Serval MeshMS Gateway application is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA 
 -->
<resources>
    <!--  main activity -->
    <string name="main_ui_lbl_info">The Serval MeshMS Gateway is designed to relay MeshMS messages out of, and into, a Serval Project mesh network</string>
    <string name="main_ui_lbl_status">Status</string>
    <string name="main_ui_lbl_status_in">Messages In: </string>
    <string name="main_ui_lbl_status_out">Messages Out: </string>
    <string name="main_ui_lbl_status_in_count">0</string>
    <string name="main_ui_lbl_status_out_count">0</string>
    <string name="main_ui_btn_settings">Settings</string>
    <string name="main_ui_btn_start">Start the Service</string>
    <string name="main_ui_btn_stop">Stop the Service</string>
    
    <!-- relay numbers activity -->
    <string name="relay_numbers_ui_lbl_heading">Relay Contacts</string>
    <string name="relay_numbers_ui_lbl_info">The list of contacts below will have messages relayed via the MeshMS gateway</string>
    
    <string name="relay_numbers_ui_btn_add">Add Contact</string>
    <string name="relay_numbers_ui_btn_delete">Delete Contact</string>
    <string name="relay_numbers_ui_btn_back">Back</string>
    
    <string name="relay_numbers_ui_dialog_new_contact_title">New Contact</string>
    <string name="relay_numbers_ui_dialog_new_contact_message">Enter a new contact number</string>
    
    <string name="relay_numbers_ui_toast_save_success">New contact saved</string>
    <string name="relay_numbers_ui_toast_save_failed">The new contact could not be saved</string>
    <string name="relay_numbers_ui_toast_invalid">The contact number must be numeric</string>
    <string name="relay_numbers_ui_toast_select_before_delete">Select a contact for deletion</string>
    <string name="relay_numbers_ui_toast_delete_sucess">Contact deleted</string>
    <string name="relay_numbers_ui_toast_delete_failed">The contact could not be deleted</string>
    
    <!-- send message activity -->
	<string name="send_message_ui_lbl_message">Attempting to send a MeshMS message</string>
    
    <!-- core service strings -->
    <string name="core_service_truncation_message">The message that you sent to \'%1$s\' that started \'%2$s\' exceeded %3$d characters and was truncated before relay by the MeshMSGateway</string>

    <!-- system strings -->
    <string name="system_application_name_full">Serval Project MeshMS Gateway</string>
    <string name="system_application_name_short">MeshMS Gateway</string>
    <string name="system_provider_authority">org.servalproject.meshms.gateway.provider.items</string>
    
    <string name="system_notification_ticker_text">Serval MeshMS Gateway is Running</string>
    <string name="system_notification_title">Serval MeshMS Gateway</string>
    <string name="system_notification_content">Serval MeshMS Gateway is running and relaying messages</string>
    
    <!--  misc strings -->
    <string name="misc_dialog_save_button">Save</string>
    <string name="misc_dialog_cancel_button">Cancel</string>

</resources>